k8s/base/domotica/esphome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: esphome
  template:
    metadata:
      labels:
        app: esphome
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: avahi
        image: ydkn/avahi:latest
        imagePullPolicy: Always
        securityContext:
          privileged: true
        resources:
          limits:
            memory: 256Mi
            cpu: "0.2"
          requests:
            memory: 128Mi
            cpu: "0.1"
      - name: esphome
        image: esphome/esphome:stable
        securityContext:
          privileged: true
          capabilities:
            add: ["NET_ADMIN"]
        resources:
          limits:
            memory: 1Gi
            cpu: "3"
          requests:
            memory: 156Mi
            cpu: "0.1"
        volumeMounts:
        - name: esphome-config
          mountPath: /config
        - name: localtime
          mountPath: /etc/localtime
          readOnly: true
      volumes:
      - name: esphome-config
        persistentVolumeClaim:
          claimName: esphome-config-pvc
      - name: localtime
        hostPath:
          path: /etc/localtime
          type: File
