k8s/base/domotica/esphome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-office"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - esphome.nicolatomassoni.it
      secretName: esphome-tls
  rules:
  - host: "esphome.nicolatomassoni.it"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: esphome-web
            port:
              number: 6052
